fix: counter, add flicker css utility

--- a/src/components/counter/scss/index.scss
+++ b/src/components/counter/scss/index.scss
@@ -4,7 +4,7 @@
     display: flex;
     gap: 2px;
     place-items: center;
-    transition: transform 0.5s 2s;
+    transition: transform calc(var(--transition-duration) / 4) var(--transition-duration);
     transform-style: flat;
 
     &-character,
